Changes in quota-tools from 3.13 to 3.14
* added option --always-resolve to force resolving even names with digits only (Jan Kara)
* minor language corrections in manpages (Jan Kara)
* implemented long options parsing for all quota tools (Jan Kara)
* quota(1) has -f option to specify filesystem list (Jan Kara)
* corrected some informal language in messages (Jan Kara)
* we cannot even stat NFS mounts in local mode as server may be unreachable (Jan Kara)
* fixed error messages in getprivs() (Jan Kara, Brian Morris)
* made UID/GID prints unsigned (Matthew Kent)
* fixed very verbose printing for quotacheck (Jan Kara)
* fixed off-by-one bug in mount options parsing (Jan Kara)
* implemented nicer message formatting for warnquota(8) (Jan Kara)
* quota(1) has -w option to supress line wrapping for long device names (Jan Kara)
* quota(1) prints grace time even if hard limit is reached (Jan Kara)
* fixed journaled quota format detection in quotacheck (Jan Kara)

Changes in quota-tools from 3.12 to 3.13
* fixed mistakes in several error messages, improved error reporting functions
  (Dmitry V. Levin)
* volume label and UUID support for reiserfs (Jan Kara)
* support for LABEL= and UUID= on a command line (Jan Kara)
* parse NFSD export table to find pseudofilesystem root for NFSv4 (Jan Kara)
* handle better when quota file should become empty (Niu YaWei)
* minor manpage and help-text fixes (Jan Kara)
* fixed quotacheck(8) to check each block only once (Jan Kara)
* fixed quotacheck(8) messages about corrupted blocks (Jan Kara)
* fixed quotacheck(8) to rename quota files after turning quotas off (Jan Kara)
* added sanity check to quota reporting (Jan Kara)
* fixed check for illegal references in quotacheck(8) (Jan Kara)
* added NFSv4 to the list of supported fs types (Jan Kara)
* updating of progress is now less frequent - should speedup quotacheck -v a bit (Jan Kara)
* added printing of directories to quotacheck(8) (Jan Kara, Jan Engelhardt)